feat: 프로필 이미지 기능 구현