@@ -1,4 +1,6 @@
 package com.example.news_feed.user.controller;
+import com.example.news_feed.common.aws.FileUploadService;
+import com.example.news_feed.user.domain.User;
 import com.example.news_feed.user.dto.request.PwdUpdateDto;
 import com.example.news_feed.user.dto.request.UserUpdateDto;
 import com.example.news_feed.user.dto.response.UserResponseDto;
@@ -6,11 +8,12 @@ import com.example.news_feed.user.service.MypageService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
-
+import org.springframework.web.multipart.MultipartFile;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -20,33 +23,43 @@ import java.util.stream.Collectors;
 public class MypageApiController {
 
     private final MypageService mypageService;
+    private final FileUploadService fileUploadService;
 
-    // 기본정보 수정
-    @PatchMapping("/mypage/{userId}/profile")
-    public ResponseEntity<UserResponseDto> updateProfile(@PathVariable Long userId,
-                                                         @RequestBody @Valid UserUpdateDto userUpdateDto,
+    // 프로필 수정
+    @PatchMapping("/myPage/{userId}/profile")
+    public ResponseEntity<UserResponseDto> updateProfileTest(@PathVariable Long userId,
+                                                         @RequestPart(value = "data", required = false) @Valid UserUpdateDto userUpdateDto,
+                                                         @RequestPart(name = "files", required = false) MultipartFile file,
                                                          BindingResult bindingResult){
 
         // 조건에 맞지 않으면 에러 메시지 출력
         if (bindingResult.hasErrors()) {
             List<String> errorMessages = bindingResult.getAllErrors()
                     .stream()
-                    .map(error -> error.getDefaultMessage())
-                    .collect(Collectors.toList());
-
+                    .map(DefaultMessageSourceResolvable::getDefaultMessage)
+                    .toList();
             UserResponseDto response = UserResponseDto.res(HttpStatus.BAD_REQUEST.value(), errorMessages.toString());
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
         }
-
+        // 프로필 이미지 s3 업로드 후  url 받아온 값 dto에 담아서 넘김
+        String profileUrl = fileUploadService.uploadProfile(file);
+        userUpdateDto.setProfileImg(profileUrl);
         mypageService.updateProfile(userId, userUpdateDto);
 
         UserResponseDto response = UserResponseDto.res(HttpStatus.OK.value(), "프로필 수정 완료");
         return ResponseEntity.status(HttpStatus.OK).body(response);
-
     };
 
+
+    // 프로필 이미지 받아오기
+    @GetMapping("/myPage/{userId}/profileImg")
+    public ResponseEntity<String> profileImg(@PathVariable Long userId){
+        User user = mypageService.showUser(userId);
+        return ResponseEntity.status(HttpStatus.OK).body(user.getProfileImg());
+    }
+
     // 패스워드 수정
-    @PatchMapping("/mypage/{userId}")
+    @PatchMapping("/myPage/{userId}")
     public ResponseEntity<UserResponseDto> updatePwd(@PathVariable Long userId,
                                                      @RequestBody @Valid PwdUpdateDto pwdUpdateDto,
                                                      BindingResult bindingResult){
